--- a/package.json
+++ b/package.json
@@ -22,16 +22,27 @@
     "@babel/preset-react": "^7.0.0-beta.42",
     "autoprefixer": "^8.2.0",
     "babel-loader": "^8.0.0-beta.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "foundation-sites": "^6.4.4-rc1",
     "html-webpack-plugin": "^3.1.0",
+    "jsonwebtoken": "^8.2.1",
+    "mdbreact": "^4.4.0",
     "mongoose": "^5.0.11",
+    "multer": "^1.3.0",
+    "nexmo": "^2.2.1",
     "node-sass": "^4.7.2",
+    "nodemailer": "^4.6.5",
     "nodemon": "^1.17.2",
+    "password-validator": "^4.1.1",
     "postcss-loader": "^2.1.3",
+    "random-number": "0.0.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
