--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "foundation-sites": "^6.4.4-rc1",
     "html-webpack-plugin": "^3.1.0",
     "jsonwebtoken": "^8.2.1",
@@ -44,17 +45,23 @@
     "postcss-loader": "^2.1.3",
     "random-number": "0.0.9",
     "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-middleware": "^3.0.1",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "^4.1.2",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "chart.js": "^2.7.2",
+    "image-webpack-loader": "^4.2.0"
   }
 }
