--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-react": "^7.0.0-beta.42",
+    "@material-ui/core": "^1.1.0",
     "autoprefixer": "^8.2.0",
     "babel-loader": "^8.0.0-beta.2",
     "bcryptjs": "^2.4.3",
@@ -43,12 +44,14 @@
     "nodemon": "^1.17.2",
     "password-validator": "^4.1.1",
     "postcss-loader": "^2.1.3",
+    "prop-types": "^15.6.1",
     "random-number": "0.0.9",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-intl-tel-input": "^5.0.5",
+    "react-phone-number-input": "^1.1.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.7",
